--- a/src/components/home/Home.css
+++ b/src/components/home/Home.css
@@ -87,13 +87,14 @@ body {
   background: Linear-gradient(45deg, rgb(206, 219, 28), rgb(121, 216, 216));
   color: navy;
   display: inline-block;
-  font-size: 25px;
-  padding: 0 120px;
+  font-size: 24px;
+  padding: 0 40px;
   border-radius: 15px;
   margin-top: 30px;
   margin-left: -50px;
   font-weight: 600;
   width: 110%;
+  text-align:center;
 }
 
 .dm span{
@@ -409,7 +410,7 @@ body {
   gap: 60px; /* Space between text and image */
   padding: 40px 0 170px 0;
   flex-wrap: wrap;
-  margin:120px 0;
+  margin:120px 0 0;
 }
 
 .solution-text-content {
