--- a/src/components/entrepreneur/Entrepreneur.css
+++ b/src/components/entrepreneur/Entrepreneur.css
@@ -1,7 +1,3 @@
-/* ========================================= */
-/* ENTREPRENEUR PAGE - PERFECT STRUCTURE CSS */
-/* ========================================= */
-
 .entrepreneur-container {
   width: 100%;
   overflow-x: hidden;
@@ -10,20 +6,16 @@
 }
 
 /* Reset */
-.entrepreneur-container * {
-  margin: 0;
+* {
   box-sizing: border-box;
 }
 
 /* Hero Section */
 .entrepreneur-container .ent-section {
   margin: 40px auto;
-  padding: 20px;
-  max-width: 1200px;
   text-align: center;
   border-radius: 20px;
-  border: 5px solid white;
-  box-shadow: 0 10px 15px rgba(0, 0, 0, 0.1);
+  
 }
 
 .entrepreneur-container .entre-title {
@@ -34,16 +26,15 @@
 }
 
 .entrepreneur-container .ent-title img {
-  width: 90%;
-  max-width: 900px;
-  height: 400px;
-  border-radius: 30px;
+  width: 120%;
+  height: 500px;
+  border-radius: 30px; 
   border: 3px solid green;
   object-fit: fill;
   box-shadow: 0 6px 12px rgba(0, 128, 0, 0.2);
   margin: 0 auto;
   display: block;
-  transition: transform 0.4s ease;
+
 }
 
 .entrepreneur-container .ent-title img:hover {
@@ -59,11 +50,11 @@
   align-items: center;
   justify-content: space-between;
   gap: 50px;
-  margin: 200px 20px 200px 20px;
   padding:40px;
   color: #ffffffe0;
   background-image: linear-gradient(to right, #2868a9, #648585);
   border-radius: 15px;
+  margin: 120px 0;
 }
 
 .ent-left * {
