--- a/src/components/students/Students.css
+++ b/src/components/students/Students.css
@@ -48,7 +48,7 @@
   align-items: center;
   justify-content: space-between;
   gap: 90px;
-  margin: 20px 40px 120px 40px;
+  margin: 60px 0;
 }
 
 .stu-page-reverse-section {
