--- a/src/components/overview/Overview.css
+++ b/src/components/overview/Overview.css
@@ -38,7 +38,7 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  margin: 120px 0;
+  margin: 130px 0 50px;
   background-image: linear-gradient(45deg, blue, red);
   border-radius: 25px;
   padding: 30px;
