--- a/src/components/income/Income.css
+++ b/src/components/income/Income.css
@@ -37,7 +37,7 @@ body{
 
 .income-text {
   flex:1;
-  font-size: 26px;
+  font-size: 26px !important;
   text-align:start;
   padding:20px;
   border-radius:20px;
