--- a/src/components/income/Income.css
+++ b/src/components/income/Income.css
@@ -26,7 +26,7 @@ body{
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding: 60px 10%;
+  padding: 60px 0;
   gap: 50px;
   margin-bottom:60px;
 }
@@ -36,8 +36,8 @@ body{
 }
 
 .income-text {
-  flex: 1;
-  font-size: 1.1rem;
+  flex:1;
+  font-size: 23px !important;
   text-align:start;
   padding:20px;
   border-radius:20px;
@@ -57,7 +57,7 @@ body{
 }
 
 .income-image {
-  flex: 1;
+  
   display: flex;
   justify-content: center;
   
