--- a/src/components/home/Home.css
+++ b/src/components/home/Home.css
@@ -84,8 +84,8 @@ body {
 }
 
 .dm {
-  background:#98FB98;
-  color: navy;
+  background:#047871;
+  color: #fff;
   display: inline-block;
   font-size: 24px;
   padding: 0 40px;
