--- a/src/components/home/Home.css
+++ b/src/components/home/Home.css
@@ -45,7 +45,7 @@
   font-size: 25px;
   font-weight: 600;
   color: navy;
-  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  font-family: "Poppins", sans serif;
   text-align: start;
 }
 
@@ -72,7 +72,7 @@
 
 body {
   margin: 0;
-  font-family: "Montserrat", Arial, sans-serif;
+  font-family: "Poppins", sans-serif;
   background: #fff;
   color: #111;
 }
@@ -84,7 +84,7 @@ body {
 }
 
 .dm {
-  background:#047871;
+  background: #047871;
   color: #fff;
   display: inline-block;
   font-size: 24px;
@@ -196,7 +196,7 @@ body {
 #hero-subtitle {
   color: green;
   font-size: 20px;
-  font-family: "sans-serif";
+  font-family: Poppins, sans-serif;
 }
 
 .hero-desc {
@@ -454,13 +454,13 @@ body {
   position: relative;
   padding-left: 35px;
   margin-bottom: 18px;
-  font-size: 1.1em;
+  font-size: 24px;
   line-height: 1.6;
   color: #070707;
 }
 
 .ar-vr-nested-card .solution-bullets li {
-  font-size: 1.1em;
+  font-size: 24px;
 }
 
 /* --- Add this to Home.css --- */
@@ -480,7 +480,7 @@ body {
   left: 0;
   top: 4px;
   color: #d32a2a;
-  font-size: 1.2em;
+  font-size: 24px;
   font-weight: bold;
 }
 
@@ -548,8 +548,7 @@ body {
 }
 
 .solution-card-title1 {
-  font-weight: bold;
-  font-size: 1.2em;
+  font-size: 24px;
   line-height: 1.4;
   color: #222;
 }
@@ -666,7 +665,7 @@ body {
   left: 50%;
   transform: translate(-50%, -50%);
   font-size: 25em;
-  font-family: serif;
+  font-family: "Poppins", sans serif;
   color: #e9e9e9;
 }
 
