--- a/src/components/health/Health.css
+++ b/src/components/health/Health.css
@@ -41,22 +41,25 @@ img:hover { transform: scale(1.05); }
   display: flex;
   flex-direction: column;
   padding-top: 20px;
-  margin-left:-20px;
 }
 
 .health-heading {
   text-align: left;
-  margin: 0 20px;
-}
-.health-heading span {
-  background-color: darkgreen;
+  display: inline;
+  margin-bottom: 25px;
+  margin-right: auto;
+  border-radius: 20px;
   margin: 0 50px;
+}
+
+.health-heading span {
+  background-color: #047871;
   color: white;
   display: inline-block;
-  line-height: 3.6rem;
-  font-size: 32px;
-  padding: 0 15px;
+  line-height: 3.2rem;
+  padding: 0 12px;
   border-radius: 5px;
+  font-size: 28px;
 }
 
 /* ---------------- HERO SECTION ---------------- */
@@ -89,7 +92,7 @@ img:hover { transform: scale(1.05); }
 .hero-content p {
   font-size: 20px;
   line-height: 1.5;
-  color: #030303;
+  color: #000000;
 }
 
 .hero-title {
@@ -102,9 +105,9 @@ img:hover { transform: scale(1.05); }
 }
 
 .color-healthy { color: #d32a2a; font-weight: 900; }
-.color-happy { color: #084700; font-weight: 900; }
+.color-happy { color: #047871; font-weight: 900; }
 .color-wealthy {
-  color: #002770;
+  color: #817676;
   font-weight: 900;
   display: block;
   margin-top: 10px;
@@ -230,10 +233,10 @@ html { scroll-behavior: smooth; }
 }
 
 /* Color Styles */
-.color1 h1 { color: #036600; font-weight: 600; font-size: 2.5rem; padding: 20px; }
-.color2 h1 { color: #b11597; font-weight: 600; font-size: 2.5rem; padding: 20px; }
-.color3 h1 { color: #34004d; font-weight: 600; font-size: 2.5rem; padding: 20px; }
-.color4 h1 { color: #002770; font-weight: 600; font-size: 2.5rem; padding: 20px; }
+.color1 h1 { color: #047871; font-weight: 600; font-size: 2.5rem; padding: 20px; }
+.color2 h1 { color: #fb0000; font-weight: 600; font-size: 2.5rem; padding: 20px; }
+.color3 h1 { color: #817676; font-weight: 600; font-size: 2.5rem; padding: 20px; }
+.color4 h1 { color: #000000; font-weight: 600; font-size: 2.5rem; padding: 20px; }
 
 .author {
   font-weight: 700;
