--- a/src/components/health/Health.css
+++ b/src/components/health/Health.css
@@ -1,3 +1,4 @@
+
 /* ---------------- VARIABLES ---------------- */
 :root {
   --font-primary: 'Poppins', sans-serif;
@@ -41,15 +42,14 @@ img:hover { transform: scale(1.05); }
   display: flex;
   flex-direction: column;
   padding-top: 20px;
+  
 }
 
 .health-heading {
   text-align: left;
   display: inline;
-  margin-bottom: 25px;
-  margin-right: auto;
   border-radius: 20px;
-  margin: 0 50px;
+  margin: 0 -50px;
 }
 
 .health-heading span {
@@ -60,6 +60,7 @@ img:hover { transform: scale(1.05); }
   padding: 0 12px;
   border-radius: 5px;
   font-size: 28px;
+  margin: 0 6px;
 }
 
 /* ---------------- HERO SECTION ---------------- */
@@ -352,8 +353,9 @@ html { scroll-behavior: smooth; }
     height: auto;
   }
   .health-heading span {
-    font-size: 1.3rem;
+    font-size: 24px;
     line-height: 1.8rem;
-    margin-left: 40px;
+    margin: 0 0 0 140px;
+    padding: 0 15px;
   }
 }
