--- a/src/components/health/Health.css
+++ b/src/components/health/Health.css
@@ -1,3 +1,4 @@
+
 /* ---------------- VARIABLES ---------------- */
 :root {
   --font-primary: 'Poppins', sans-serif;
@@ -41,15 +42,14 @@ img:hover { transform: scale(1.05); }
   display: flex;
   flex-direction: column;
   padding-top: 20px;
+  
 }
 
 .health-heading {
   text-align: left;
   display: inline;
-  margin-bottom: 25px;
-  margin-right: auto;
   border-radius: 20px;
-  margin: 0 50px;
+  margin: 0 -50px;
 }
 
 .health-heading span {
@@ -60,6 +60,7 @@ img:hover { transform: scale(1.05); }
   padding: 0 12px;
   border-radius: 5px;
   font-size: 28px;
+  margin: 0 6px;
 }
 
 /* ---------------- HERO SECTION ---------------- */
@@ -70,7 +71,6 @@ img:hover { transform: scale(1.05); }
   justify-content: space-between;
   flex-wrap: wrap;
   gap: 20px;
-  min-height: calc(100vh - 120px);
   margin: 0px -20px;
 }
 
@@ -170,8 +170,8 @@ html { scroll-behavior: smooth; }
 /* ---------------- HERO IMAGE ---------------- */
 .image-health-container {
   position: relative;
-  width: 340px;
-  height: 370px;
+  width: 400px;
+  height: 580px;
   margin: 50px auto;
   overflow: hidden;
   display: flex;
@@ -199,7 +199,7 @@ html { scroll-behavior: smooth; }
 }
 
 .styled-img:hover {
-  transform: scale(1.05);
+  transform: scale(1.01);
   filter: brightness(1.15) contrast(1.1) saturate(130%);
 }
 
@@ -352,8 +352,9 @@ html { scroll-behavior: smooth; }
     height: auto;
   }
   .health-heading span {
-    font-size: 1.3rem;
+    font-size: 24px;
     line-height: 1.8rem;
-    margin-left: 40px;
+    margin: 0 0 0 140px;
+    padding: 0 15px;
   }
 }
