--- a/src/components/health/Health.css
+++ b/src/components/health/Health.css
@@ -66,13 +66,12 @@ img:hover { transform: scale(1.05); }
 /* ---------------- HERO SECTION ---------------- */
 .hero {
   display: flex;
-  align-items: center;
   color: #fff;
   justify-content: space-between;
   flex-wrap: wrap;
-  gap: 20px;
-  min-height: calc(100vh - 120px);
-  margin: 0px -20px;
+  gap: 10px;
+  align-items: center;
+  margin: -65px -40px 20px;
 }
 
 .hero-content {
@@ -172,7 +171,7 @@ html { scroll-behavior: smooth; }
 .image-health-container {
   position: relative;
   width: 420px;
-  height: 520px;
+  height: 580px;
   margin: 50px auto;
   overflow: hidden;
   display: flex;
