--- a/src/components/health/Health.css
+++ b/src/components/health/Health.css
@@ -66,12 +66,12 @@ img:hover { transform: scale(1.05); }
 /* ---------------- HERO SECTION ---------------- */
 .hero {
   display: flex;
-  align-items: center;
   color: #fff;
   justify-content: space-between;
   flex-wrap: wrap;
-  gap: 20px;
-  margin: 0px -20px;
+  gap: 10px;
+  align-items: center;
+  margin: -65px 0px 20px -40px;
 }
 
 .hero-content {
@@ -170,7 +170,7 @@ html { scroll-behavior: smooth; }
 /* ---------------- HERO IMAGE ---------------- */
 .image-health-container {
   position: relative;
-  width: 400px;
+  width: 420px;
   height: 580px;
   margin: 50px auto;
   overflow: hidden;
@@ -355,6 +355,9 @@ html { scroll-behavior: smooth; }
     font-size: 24px;
     line-height: 1.8rem;
     margin: 0 0 0 140px;
-    padding: 0 15px;
+    padding: 10px 15px;
+  }
+  .hero{
+    margin: 5px 0;
   }
 }
